# ai-real-estate-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .vercelignore  BACKLOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  ISSUES.MD  MODERNIZATION_PROPOSAL.md  OVH_DEPLOYMENT.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PRD.MD  README.md  TESTING_GUIDE.md  TODO.MD  UI_COMPONENTS_GUIDE.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  ai-real-estate-assistant.service  app.py  app_modern.py  app_v2.py  docker-compose.yml  mypy.ini  package-lock.json  package.json  packages.txt  pip-audit.json  playwright.config.ts  pyproject.toml  render.yaml  requirements.txt  run_all.py  (+8 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
.taskmaster/: config.json
agents/: hybrid_agent.py  query_analyzer.py  recommendation_engine.py  web_research_agent.py
ai/: agent.py  app_services.py  memory.py  prompt_templates.py
analytics/: __init__.py  financial_metrics.py  market_insights.py  session_tracker.py  valuation_model.py
api/: auth.py  chat_sources.py  dependencies.py  health.py  main.py  models.py  observability.py  openapi_markdown.py
common/: cfg.py
config/: __init__.py  settings.py
data/: csv_loader.py  schemas.py
docs/: API_REFERENCE.generated.md  API_REFERENCE.md  ARCHITECTURE.md  BACKLOG.md  BRANCH_PROTECTION.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DEVELOPER_NOTES.md  DOCKER.md  INSTALLATION.md  ISSUES.MD  PRD.MD  (+13 more)
(+314 files in other folders)
