[tool.poetry]
name = "ai-real-estate-assistant"
version = "0.1.0"
description = "AI Real Estate Assistant App"
authors = ["Alexander Nesterovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
# Core framework
streamlit = "^1.37.0"
python-dotenv = "^1.0.1"

# LLM Providers
openai = "^1.37.1"
langchain-openai = "^0.1.19"
langchain-anthropic = "^0.1.20"
langchain-google-genai = "^1.0.8"

# LangChain Core
# ImportError: libcudnn.so.9: cannot open shared object file: No such file or directory
langchain-community = "^0.2.10"
langchain-core = "^0.2.28"
langchain-experimental = "^0.0.63"
langchain-text-splitters = "^0.2.2"
langchainhub = "^0.1.20"

# Vector Store & Embeddings
chromadb = "^0.5.21"
langchain-chroma = "^0.1.4"
fastembed = "^0.4.2"
docarray = "^0.40.0"

# Data Validation & Processing
pydantic = "^2.5.0"
validators = "^0.33.0"
pandas = "^2.1.0"

# Utilities
tabulate = "^0.9.0"
pyzipcode = "^3.0.1"
faker = "^26.0.0"
duckduckgo-search = "^6.2.6"

# Visualization
folium = "^0.17.0"
streamlit-folium = "^0.22.0"

# HTTP & Async
httpx = "^0.25.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
